# data-engineer-case

./: .gitignore  Makefile  README.md  pyproject.toml
data/: events.csv  memberships.csv  teams.csv
output/daily_active_teams/: .part-00000-02887d71-2f6f-4f11-8885-d65a7bb3a0eb-c000.csv.crc
output/rsvp_summary/: .part-00000-0a4d8c20-8b25-4354-a09f-84b7dccfab43-c000.csv.crc
src/: streamlit.py  tasks.py  workflow.py
src/tasks/: attendance_rate.py  daily_active_teams.py  extract_data.py  rsvp_summary.py
tests/: test_tasks.py
tests/tasks/: test_daily_active_teams_task.py
